ingress-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetis.io/rewrite-target: /
    kubernetis.io/ingress.class: "nginx"
spec:
  rules:
    - host: alicek106.example.com
